--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ html {
   --checked-shadow: #6d7c00;
   --checked-light: #e9ff00;
   --range-thumb-shadow: #c3d400;
-  --custom-color: #7d8e00; }
+  --custom-color: #7d8e00;
+  --line-width: 85%; }
 
 body {
   background-color: var(--my-background);
@@ -29,32 +30,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Baloo Chettan 2', cursive; }
-
-.embellishment {
-  color: var(--custom-color);
-  font-size: 120px;
-  position: absolute; }
-  @media (max-width: 900px) {
-    .embellishment {
-      font-size: 70px; } }
-  .embellishment--left {
-    top: 300px;
-    left: -340px;
-    transform: rotate(-90deg);
-    text-shadow: -3px -3px 5px var(--shadow), 3px 3px 4px var(--light); }
-    @media (max-width: 900px) {
-      .embellishment--left {
-        top: 910px;
-        left: -100px; } }
-  .embellishment--right {
-    bottom: 300px;
-    right: -340px;
-    transform: rotate(90deg);
-    text-shadow: 3px 3px 5px var(--shadow), -3px -3px 4px var(--light); }
-    @media (max-width: 900px) {
-      .embellishment--right {
-        bottom: 845px;
-        right: -100px; } }
 
 main {
   display: flex;
@@ -67,19 +42,48 @@ main {
   box-shadow: inset -12px 12px 12px var(--shadow), inset 12px -12px 12px var(--light);
   border-radius: 10px;
   margin: 50px 0;
-  padding: 20px;
-  position: relative; }
+  padding: 10px 0;
+  position: relative;
+  max-width: 650px; }
   @media (max-width: 900px) {
     main {
-      width: 90vw; } }
+      width: 90vw;
+      margin: 5vw 0; } }
+
+.embellishment {
+  color: var(--custom-color);
+  font-size: 8em;
+  text-align: center;
+  position: absolute; }
+  @media (max-width: 900px) {
+    .embellishment {
+      display: none; } }
+  .embellishment--left {
+    top: 300px;
+    left: -340px;
+    transform: rotate(-90deg);
+    text-shadow: -3px -3px 5px var(--shadow), 3px 3px 4px var(--light); }
+  .embellishment--right {
+    bottom: 300px;
+    right: -340px;
+    transform: rotate(90deg);
+    text-shadow: 3px 3px 5px var(--shadow), -3px -3px 4px var(--light); }
 
 .main-header {
   display: inline-block;
   font-size: 50px;
   text-transform: uppercase;
+  text-align: center;
+  line-height: 0.8em;
   color: var(--gradient-from);
   text-shadow: -3px 3px 4px var(--shadow), 2px -2px 4px var(--light);
   margin-bottom: 20px; }
+  @media (max-width: 900px) {
+    .main-header {
+      color: var(--custom-color); } }
+  @media (max-width: 350px) {
+    .main-header {
+      font-size: 36px; } }
 
 .practice-header {
   color: var(--label); }
@@ -87,13 +91,21 @@ main {
 .date-and-mode {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 100%;
-  padding: 10px; }
+  width: var(--line-width); }
+  @media (max-width: 400px) {
+    .date-and-mode {
+      display: flex;
+      flex-flow: column;
+      justify-content: center;
+      align-items: center; } }
 
 .current-date {
   color: var(--light);
   grid-column: 1;
   align-self: center; }
+  @media (max-width: 400px) {
+    .current-date {
+      margin-bottom: 8px; } }
 
 .change-mode {
   grid-column: 2;
@@ -107,6 +119,9 @@ main {
   border-radius: 6px;
   border: none;
   padding: 5px 15px; }
+  @media (max-width: 400px) {
+    .change-mode {
+      margin-bottom: 16px; } }
   .change-mode:hover {
     cursor: pointer; }
   .change-mode:active {
@@ -115,23 +130,36 @@ main {
 
 .form {
   display: flex;
-  flex-flow: column;
-  width: 600px; }
+  align-items: center;
+  justify-content: center;
+  flex-flow: column; }
   .form__line {
     display: grid;
     grid-template-columns: auto 1fr;
     grid-template-areas: "form-description form__item";
-    width: 100%;
-    column-gap: 5px;
-    padding: 0 10px; }
+    width: var(--line-width);
+    column-gap: 5px; }
     .form__line--essay {
-      margin: 30px 20px 60px; }
+      margin: 30px 0 60px;
+      width: var(--line-width); }
     .form__line--photo {
       margin: 40px 0; }
     .form__line--color {
       margin-top: 40px;
       width: 40%;
       align-self: center; }
+    .form__line--range {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      grid-template-areas: "form-description form__item";
+      width: var(--line-width);
+      column-gap: 5px; }
+    @media (max-width: 500px) {
+      .form__line {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: column; } }
   .form__description {
     color: var(--label);
     grid-area: form-description;
@@ -157,6 +185,8 @@ main {
       margin: 10px; }
     .form__description--age {
       color: var(--label); }
+    .form__description--color {
+      width: max-content; }
   .form__item {
     width: 100%;
     color: var(--light-text);
@@ -190,6 +220,9 @@ main {
       margin-right: 10px;
       margin-left: 40px;
       vertical-align: middle; }
+      @media (max-width: 330px) {
+        .form__item--radio {
+          margin-left: 15px; } }
       .form__item--radio:checked {
         background: var(--checked-background);
         box-shadow: inset -2px 2px 4px var(--checked-shadow), inset 2px -2px 4px var(--checked-light); }
@@ -222,9 +255,13 @@ main {
       height: 180px;
       box-shadow: inset -5px 5px 10px var(--shadow), inset 5px -5px 10px var(--light);
       padding: 10px; }
+      @media (max-width: 900px) {
+        .form__item--essay {
+          background: var(--custom-color); } }
     .form__item--color {
       padding: 5px;
-      height: 2.5em; }
+      height: 2.5em;
+      width: 100%; }
 
 .fieldset {
   text-align: center;
@@ -232,7 +269,8 @@ main {
   box-shadow: -5px 5px 10px var(--shadow), 5px -5px 10px var(--light);
   border-radius: 10px;
   border: none;
-  margin: 20px; }
+  margin: auto;
+  width: var(--line-width); }
   .fieldset__description {
     font-weight: bold;
     text-transform: uppercase;
@@ -240,7 +278,8 @@ main {
     /*wsuwa opis do środka pola fieldset*/
     color: var(--label);
     margin: auto;
-    padding: 20px; }
+    padding: 20px;
+    text-align: center; }
   .fieldset--radio {
     display: block;
     text-align: left;
@@ -250,11 +289,14 @@ main {
     border: none;
     margin: auto;
     width: 50%; }
+    @media (max-width: 500px) {
+      .fieldset--radio {
+        width: var(--line-width); } }
 
 .agreement {
   color: var(--label);
-  padding: 20px;
-  text-align: center; }
+  text-align: center;
+  width: var(--line-width); }
   .agreement__input {
     text-align: center; }
 
