--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ html {
 --checked-light: #e9ff00;
 --range-thumb-shadow: #c3d400;
 --custom-color: #7d8e00;
+--line-width: 85%;
 }
 
 
@@ -34,38 +35,6 @@ body {
   font-family: 'Baloo Chettan 2', cursive;
 }
 
-.embellishment {
-  color: var(--custom-color);
-  font-size: 120px;
-  position: absolute;
-  @media (max-width: 900px) {
-    font-size: 70px;
-  }
-  &--left {
-      top: 300px;
-      left: -340px;
-      transform: rotate(-90deg);
-      text-shadow:  -3px -3px 5px var(--shadow), 
-                   3px 3px 4px var(--light); 
-      @media (max-width: 900px) {   
-        top: 910px;
-        left: -100px;
-      }
-  }
-  &--right {
-      bottom: 300px;
-      right: -340px;
-      transform: rotate(90deg);
-      text-shadow:  3px 3px 5px var(--shadow), 
-                   -3px -3px 4px var(--light);
-      @media (max-width: 900px) {
-        bottom: 845px;
-        right: -100px;
-      } 
-  }
-  
-}
-
 main {
   display: flex;
   align-items: center;
@@ -78,20 +47,55 @@ main {
              inset 12px -12px 12px var(--light);
   border-radius: 10px; 
   margin: 50px 0; 
-  padding: 20px;
+  padding: 10px 0;
   position: relative;
+  max-width: 650px;
   @media (max-width: 900px) {
     width: 90vw;
+    margin: 5vw 0; 
   }
+}
+
+.embellishment {
+  color: var(--custom-color);
+  font-size: 8em;
+  text-align: center;
+  position: absolute;
+  @media (max-width: 900px) {
+    display: none;
+  } 
+  &--left {
+      top: 300px;
+      left: -340px;
+      transform: rotate(-90deg);
+      text-shadow:  -3px -3px 5px var(--shadow), 
+                   3px 3px 4px var(--light);
+  }
+  &--right {
+      bottom: 300px;
+      right: -340px;
+      transform: rotate(90deg);
+      text-shadow:  3px 3px 5px var(--shadow), 
+                   -3px -3px 4px var(--light);
+  }
+  
 }
 .main-header {
   display: inline-block;
   font-size: 50px;
   text-transform: uppercase;
+  text-align: center;
+  line-height: 0.8em;
   color: var(--gradient-from);
   text-shadow:  -3px 3px 4px var(--shadow), 
                2px -2px 4px var(--light); 
-  margin-bottom: 20px;    
+  margin-bottom: 20px; 
+  @media (max-width: 900px) {
+    color: var(--custom-color);
+  }
+  @media (max-width: 350px) {
+    font-size: 36px;
+  }   
 }
 .practice-header {
   color: var(--label);
@@ -99,13 +103,21 @@ main {
 .date-and-mode {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width:100%;
-  padding: 10px;
+  width: var(--line-width);
+  @media (max-width: 400px) {
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .current-date {
   color: var(--light);
   grid-column: 1;
   align-self: center;
+  @media (max-width: 400px) {
+    margin-bottom: 8px;
+  }
 }
 .change-mode {
   grid-column: 2;
@@ -120,6 +132,9 @@ main {
   border-radius: 6px;
   border: none;
   padding: 5px 15px;
+  @media (max-width: 400px) {
+    margin-bottom: 16px;
+  }
   &:hover {
     cursor: pointer;
   }
@@ -132,17 +147,18 @@ main {
 
 .form {
   display: flex;
+  align-items: center;
+  justify-content: center;
   flex-flow: column;
-  width: 600px;
   &__line {
       display: grid;
       grid-template-columns: auto 1fr;
       grid-template-areas: "form-description form__item";
-      width: 100%;
+      width: var(--line-width);
       column-gap: 5px;
-      padding: 0 10px;
       &--essay {
-          margin: 30px 20px 60px;
+          margin: 30px 0 60px;
+          width: var(--line-width);
       }
       &--photo {
         margin: 40px 0;
@@ -151,6 +167,19 @@ main {
         margin-top: 40px;
         width: 40%;
         align-self: center;
+      }
+      &--range {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-template-areas: "form-description form__item";
+        width: var(--line-width);
+        column-gap: 5px;
+      }
+      @media (max-width: 500px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: column;
       }
   }
   &__description {
@@ -181,6 +210,9 @@ main {
       }
       &--age {
           color:var(--label); 
+      }
+      &--color {
+        width: max-content;
       }
   }
   &__item {
@@ -221,6 +253,9 @@ main {
           margin-right: 10px;
           margin-left: 40px;
           vertical-align: middle;
+          @media (max-width: 330px) {
+            margin-left: 15px;
+          }
           &:checked {
               background: var(--checked-background);
               box-shadow: inset -2px 2px 4px var(--checked-shadow), 
@@ -262,10 +297,14 @@ main {
           box-shadow: inset -5px 5px 10px var(--shadow), 
                       inset 5px -5px 10px var(--light);
           padding: 10px;
+          @media (max-width: 900px) {
+            background: var(--custom-color);
+          }
       }
       &--color {
         padding: 5px;
         height: 2.5em;
+        width: 100%;
       }
   }
 }
@@ -277,7 +316,8 @@ main {
                5px -5px 10px var(--light); 
   border-radius: 10px;
   border: none;
-  margin: 20px;
+  margin: auto;
+  width: var(--line-width);
   &__description {
       font-weight: bold;
       text-transform: uppercase;
@@ -285,6 +325,7 @@ main {
       color:var(--label);
       margin: auto;
       padding: 20px;
+      text-align: center;
   }
   &--radio {
       display: block;
@@ -296,13 +337,16 @@ main {
       border: none;
       margin: auto;
       width: 50%;
+      @media (max-width: 500px) {
+        width: var(--line-width);
+      }
   }
 }
 
 .agreement {
   color:var(--label);
-  padding: 20px;
   text-align: center;
+  width: var(--line-width);
   &__input {
       text-align: center;
   }
